--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
   "license": "ISC",
   "devDependencies": {
     "@codechecks/client": "^0.1.12",
-    "eth-gas-reporter": "^0.2.24",
     "@openzeppelin/contracts": "^4.7.1",
+    "@openzeppelin/test-helpers": "^0.5.15",
     "coveralls": "^3.1.1",
+    "eth-gas-reporter": "^0.2.24",
     "solidity-coverage": "^0.7.20"
+  },
+  "dependencies": {
+    "truffle-assertions": "^0.9.2",
+    "web3": "^1.7.4"
   }
 }
