--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@openzeppelin/test-helpers": "^0.5.15",
     "coveralls": "^3.1.1",
     "eth-gas-reporter": "^0.2.24",
-    "solidity-coverage": "^0.7.20"
+    "ganache-cli": "6.12.2",
+    "solidity-coverage": "0.7.18"
   },
   "dependencies": {
+    "ganache-cli": "6.12.2",
+    "truffle": "^5.4.29",
     "truffle-assertions": "^0.9.2",
     "web3": "^1.7.4"
   }
