--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ coverage
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
+.privKey
+
 # node-waf configuration
 .lock-wscript
 
