--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "scripts": {
     "compile": "truffle compile",
     "test": "truffle test --network development",
-    "coverage": "truffle run coverage --network development"
+    "coverage": "truffle run coverage",
+    "deployMumbai": "truffle migrate --network mumbai",
+    "deployMatic": "truffle migrate --network matic --verbose-rpc --interactive --skip-dry-run --reset",
+    "verifyMumbai" : "truffle run verify Web3BazaarEscrow --network mumbai"
   },
   "author": "drbrown",
   "license": "ISC",
@@ -20,9 +23,12 @@
     "coveralls": "^3.1.1",
     "eth-gas-reporter": "^0.2.24",
     "ganache-cli": "6.12.2",
-    "solidity-coverage": "0.7.18"
+    "solidity-coverage": "0.7.18",
+    "truffle-plugin-verify": "^0.5.26"
   },
   "dependencies": {
+    "@truffle/hdwallet-provider": "^2.0.12",
+    "dotenv": "^16.0.1",
     "ganache-cli": "6.12.2",
     "truffle": "^5.4.29",
     "truffle-assertions": "^0.9.2",
